move from gradle to maven; java 10+ to 8