@@ -1,7 +1,8 @@
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
+import org.junit.Assert;
+import org.junit.Test;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.Map;
 
 import static org.approvaltests.Approvals.verify;
@@ -9,35 +10,39 @@ import static org.approvaltests.Approvals.verify;
 public class StatementPrinterTests {
 
     @Test
-    void exampleStatement() {
-        Map<String, Play> plays = Map.of(
-                "hamlet",  new Play("Hamlet", "tragedy"),
-                "as-like", new Play("As You Like It", "comedy"),
-                "othello", new Play("Othello", "tragedy"));
+    public void exampleStatement() {
+        Map<String, Play> plays = new HashMap<String, Play>() {{
+            put("hamlet", new Play("Hamlet", "tragedy"));
+            put("as-like", new Play("As You Like It", "comedy"));
+            put("othello", new Play("Othello", "tragedy"));
+        }};
 
-        Invoice invoice = new Invoice("BigCo", List.of(
+        Invoice invoice = new Invoice("BigCo", Arrays.asList(
                 new Performance("hamlet", 55),
                 new Performance("as-like", 35),
-                new Performance("othello", 40)));
+                new Performance("othello", 40)
+        ));
 
         StatementPrinter statementPrinter = new StatementPrinter();
-        var result = statementPrinter.print(invoice, plays);
+        String result = statementPrinter.print(invoice, plays);
 
         verify(result);
     }
 
     @Test
-    void statementWithNewPlayTypes() {
-        Map<String, Play> plays = Map.of(
-                "henry-v",  new Play("Henry V", "history"),
-                "as-like", new Play("As You Like It", "pastoral"));
+    public void statementWithNewPlayTypes() {
 
-        Invoice invoice = new Invoice("BigCo", List.of(
+        Map<String, Play> plays = new HashMap<String, Play>() {{
+            put("henry-v", new Play("Henry V", "history"));
+            put("as-like", new Play("As You Like It", "pastoral"));
+        }};
+
+        Invoice invoice = new Invoice("BigCo", Arrays.asList(
                 new Performance("henry-v", 53),
                 new Performance("as-like", 55)));
 
         StatementPrinter statementPrinter = new StatementPrinter();
-        Assertions.assertThrows(Error.class, () -> {
+        Assert.assertThrows(Error.class, () -> {
             statementPrinter.print(invoice, plays);
         });
     }
